base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"  
spec:
  defaultBackend:
    service:
      name: ui-service
      port:
        number: 80
  rules:
    - host: loanpredictor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: ui-service
                  port: 
                    number: 80
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: server-service
                  port: 
                    number: 80
